--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   ],
   "devDependencies": {
     "babel-preset-react-app": "7.0.0",
-    "react-testing-library": "^5.9.0"
+    "jest-dom": "^3.1.2",
+    "react-testing-library": "^6.0.0"
   }
 }
