Added the experimental Explore page from GSIM-browser. Reverted back to ns namespace since that is default on lds deployed on the platform. Removed AbortController() from Fetch API since it resulted in inconsistencies. Exported AppMenu to its own component. Refactored some code.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "url": "https://github.com/statisticsnorway/linked-data-store-client"
   },
   "dependencies": {
+    "chart.js": "^2.7.3",
     "date-fns": "^2.0.0-alpha.27",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.7.4",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
