--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.5",
     "react-table": "^6.9.2",
     "semantic-ui-css": "^2.4.1",
@@ -39,5 +39,23 @@
   "devDependencies": {
     "jest-dom": "^3.1.2",
     "react-testing-library": "^6.0.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**",
+      "!src/index.js",
+      "!src/**/index.js",
+      "!src/enum/**",
+      "!src/utilities/fetch/Fetch.js",
+      "!src/__tests__/test-data/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 25,
+        "functions": 25,
+        "lines": 25,
+        "statements": 25
+      }
+    }
   }
 }
