Updated dependencies. Added another test. Changed 'test' to 'coverage' in Dockerfile so the build fails if the coverage threshold is not at least what has been set in package.json.

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "jest-dom": "^3.1.2",
-    "react-testing-library": "^7.0.0"
+    "@testing-library/react": "^8.0.1",
+    "jest-dom": "^3.1.2"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -51,10 +51,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 25,
-        "functions": 25,
-        "lines": 25,
-        "statements": 25
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
       }
     }
   }
