--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@testing-library/react": "^8.0.1",
-    "jest-dom": "^3.1.2"
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -51,10 +51,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 50,
-        "functions": 50,
-        "lines": 50,
-        "statements": 50
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
       }
     }
   }
