--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.7.3",
     "date-fns": "^2.0.0-alpha.27",
     "react": "^16.7.0",
+    "react-ace": "^7.0.4",
     "react-chartjs-2": "^2.7.4",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
