Added functioning baseline for domain links between StatisticalProgram and ProcessStep.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "chart.js": "^2.7.3",
     "date-fns": "^2.0.0-alpha.27",
+    "graphql-request": "^1.8.2",
+    "humanize-graphql-response": "^1.0.0",
     "react": "^16.7.0",
     "react-ace": "^7.0.4",
     "react-chartjs-2": "^2.7.4",
