--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "graphql-request": "^1.8.2",
     "humanize-graphql-response": "^1.0.0",
     "react": "^16.7.0",
-    "react-ace": "^7.0.4",
+    "react-ace": "^8.0.0",
     "react-chartjs-2": "^2.7.4",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
@@ -50,7 +50,8 @@
       "!src/**/index.js",
       "!src/enum/**",
       "!src/utilities/fetch/Fetch.js",
-      "!src/__tests__/test-data/**"
+      "!src/__tests__/test-data/**",
+      "!src/pages/domain/single/DomainLinks.js"
     ],
     "coverageThreshold": {
       "global": {
