--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*
 sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*.json
 sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*.json
 sonar.cpd.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*.json
-sonar.coverage.exclusions=**/build/**, **/coverage/**, **/*.xml, **/*.json, **/src/__tests__/**, **/src/enum/**, **/src/index.js, **/src/**/index.js, **/src/utilities/fetch/Fetch.js, **/src/pages/domain/single/DomainLinks.js
+sonar.coverage.exclusions=**/build/**, **/coverage/**, **/*.xml, **/*.json, **/src/__tests__/**, **/src/enum/**, **/src/index.js, **/src/**/index.js, **/src/utilities/fetch/Fetch.js
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
