--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.scm.disabled=true
 sonar.sources=src
-sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*.json
-sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*.json
-sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*.json
-sonar.cpd.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/*.xml, **/*.json
-sonar.coverage.exclusions=**/build/**, **/coverage/**, **/*.xml, **/*.json, **/src/__tests__/**, **/src/enum/**, **/src/index.js, **/src/**/index.js, **/src/utilities/fetch/Fetch.js
+sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**
+sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**
+sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**
+sonar.cpd.exclusions=**/node_modules/**, **/build/**, **/coverage/**
+sonar.coverage.exclusions=**/build/**, **/coverage/**, **/src/__tests__/**, **/src/index.js, **/src/utilities/fetch/Fetch.js
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
