--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linked-data-store-client",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "private": true,
   "repository": {
     "type": "git",
@@ -17,8 +17,8 @@
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.2.0",
-    "react-table": "^6.9.2",
+    "react-scripts": "3.3.0",
+    "react-table-6": "^6.11.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.0",
     "uuid": "^3.3.2"
