--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**
 sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**
 sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**
 sonar.cpd.exclusions=**/node_modules/**, **/build/**, **/coverage/**
-sonar.coverage.exclusions=**/build/**, **/coverage/**, **/src/__tests__/**, **/src/index.js, **/src/utilities/fetch/Fetch.js
+sonar.coverage.exclusions=**/build/**, **/coverage/**, **/src/__tests__/**, **/src/index.js, **/src/**/index.js, **/src/enum/**, **/src/utilities/fetch/Fetch.js
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
