--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_LDS=https://lds-client.staging-bip-app.ssb.no/be/lds-gsim
+REACT_APP_LDS=https://lds-client.staging-bip-app.ssb.no/be/exploration-lds
