--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.scm.disabled=true
 sonar.sources=src
-sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums**
-sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums**
-sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums**
-sonar.cpd.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enums**
-sonar.coverage.exclusions=**/build/**, **/coverage/**, **/enums**, **/src/__tests__/**, **/src/index.js, **/index.js, **/src/utilities/fetch/Fetch.js
+sonar.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enum/**
+sonar.test.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enum/**
+sonar.javascript.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enum/**
+sonar.cpd.exclusions=**/node_modules/**, **/build/**, **/coverage/**, **/enum/**
+sonar.coverage.exclusions=**/build/**, **/coverage/**, **/enum/**, **/__tests__/**, **/index.js, **/utilities/fetch/Fetch.js
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
