--- a/package.json
+++ b/package.json
@@ -1,33 +1,42 @@
 {
   "name": "linked-data-store-client",
-  "version": "0.7.2",
-  "private": true,
+  "version": "0.8.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/statisticsnorway/linked-data-store-client"
   },
+  "author": "Statistics Norway",
+  "license": "Apache-2.0",
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    }
+  ],
   "dependencies": {
+    "ace-builds": "^1.4.12",
     "chart.js": "^2.7.3",
     "date-fns": "^2.0.0-alpha.27",
-    "graphql-request": "^1.8.2",
+    "graphql": "^15.3.0",
+    "graphql-request": "^3.0.0",
     "humanize-graphql-response": "^1.0.0",
     "react": "^16.7.0",
-    "react-ace": "^8.0.0",
+    "react-ace": "^9.1.3",
     "react-chartjs-2": "^2.7.4",
-    "react-datepicker": "^2.1.0",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "react-table-6": "^6.11.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.0",
-    "uuid": "^3.3.2"
+    "semantic-ui-react": "^1.2.1",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "coverage": "react-scripts test --coverage --watchAll=false",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "coverage": "react-scripts test --env=jest-environment-jsdom-sixteen --coverage --watchAll=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,8 +55,10 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^9.1.4"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "@testing-library/user-event": "^12.1.3",
+    "jest-environment-jsdom-sixteen": "^1.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
