--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linked-data-store-client",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/statisticsnorway/linked-data-store-client"
@@ -17,9 +17,6 @@
     "ace-builds": "^1.4.12",
     "chart.js": "^2.7.3",
     "date-fns": "^2.0.0-alpha.27",
-    "graphql": "^15.3.0",
-    "graphql-request": "^3.0.0",
-    "humanize-graphql-response": "^1.0.0",
     "react": "^16.7.0",
     "react-ace": "^9.1.3",
     "react-chartjs-2": "^2.7.4",
@@ -33,8 +30,9 @@
     "uuid": "^8.3.0"
   },
   "scripts": {
+    "prestart": "react-env --dest ./public",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-env --dest ./build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "coverage": "react-scripts test --env=jest-environment-jsdom-sixteen --coverage --watchAll=false",
     "eject": "react-scripts eject"
@@ -55,8 +53,9 @@
     ]
   },
   "devDependencies": {
+    "@beam-australia/react-env": "^2.1.2",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^10.4.9",
+    "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.3",
     "jest-environment-jsdom-sixteen": "^1.0.3"
   },
